--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -4,7 +4,7 @@
 
 .services-section {
     background-color: var(--light);
-    padding: 60px 20px 100px;
+    padding: 20px 20px 100px;
 }
 
 @media (max-width: 768px) {
