--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -145,7 +145,7 @@ ul {
 
 /* Standard Section Spacing */
 section {
-    padding: 60px 0;
+    padding: 58px 0;
 }
 
 /* Reusable Section Title Styling */
